--- a/WebSite/Практика-сайты/Project-2/src/sass/style.css
+++ b/WebSite/Практика-сайты/Project-2/src/sass/style.css
@@ -1,4 +1,10 @@
-
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -408,7 +414,6 @@ html {
   position: absolute;
   top: 129px;
   right: 226px;
-  z-index: 1;
 }
 .main-section__second-elipse {
   position: absolute;
@@ -483,12 +488,10 @@ html {
   right: 76px;
 }
 .right-wrapper__icon-box {
-  
   margin-bottom: 1px;
   padding-left: 10px;
 }
 .right-wrapper__title {
-  z-index: 2;
   margin-bottom: 5px;
 }
 .right-wrapper__text {
@@ -499,8 +502,6 @@ html {
 .icons {
   display: flex;
   flex-direction: row;
-  position: relative;
-  z-index: 2;
 }
 .icons__items {
   display: flex;
@@ -538,7 +539,7 @@ html {
 }
 .buttons__main-btn {
   margin-right: 32px;
-  
+  position: absolute;
   width: 200px;
   height: 60px;
   background: #F28B64;
@@ -548,13 +549,6 @@ html {
   font-size: 18px;
   font-weight: bold;
   color: white;
-}
-
-.buttons__main-btn:hover {
-  background-color:white;
-  color: #F28B64;
-  transition: 0.3s;
-  font-size: 20px;
 }
 .buttons__icon-btn {
   display: inline-flex;
