--- a/WebSite/Практика-сайты/Robot-school/src/sass/style.sass
+++ b/WebSite/Практика-сайты/Robot-school/src/sass/style.sass
@@ -95,11 +95,24 @@
             padding: 25px 54px
             justify-content: center
             align-items: center
-            gap: 10px
+            font-size: 20px
             border-radius: 5px
             background: #D52027
             top: 550px
             left: 150px
+            box-shadow: 5px 5px 5px red
+            color: white
+            border: none
+
+        .btn-box:hover 
+            color: #D52027
+            font-size: 22px
+            background-color: white
+            transiton: 0.3s
+            cursor: pointer
+            
+
+
 
     .right-wrapper
         position: relative
@@ -237,10 +250,29 @@
         font-weight: 600
 
     .four-section-scrolling
+        width: 100%
+        overflow: hidden 
+        position: relative
         display: flex
-        flex-direction: row
-        overflow-y: scroll
-        justify-content: space-between 15px
+
+        .carousel-track 
+            display: flex
+            gap:20px
+            width: max-content
+            animation: scroll 20s linear infinite
+        
+        .carousel-track:hover 
+            animation-play-state: paused
+        
+        .four-section-scrolling__cards 
+            flex-shrink: 0
+            width: 250px 
+        @keyframes scroll 
+            0% 
+                transform: translateX(0)
+            100% 
+                transform: translateX(-50%)
+        
         
 
         &::-webkit-scrollbar
